--- a/毕业设计笔记.md
+++ b/毕业设计笔记.md
@@ -6,6 +6,20 @@
 
 <img src="/home/kobayashi/桌面/毕业设计笔记/picture/微信图片_2025-02-27_141714_994.png" style="zoom: 33%;" /> 
 
+#### 前馈神经网络（Feedforward Neural Network，FNN）
+
+前馈神经网络（Feedforward Neural Network，FNN）是神经网络家族中的基本单元。
+
+前馈神经网络特点是数据从输入层开始，经过一个或多个隐藏层，最后到达输出层，全过程没有循环或反馈。
+
+**前馈神经网络的基本结构：**
+
+- **输入层：** 数据进入网络的入口点。输入层的每个节点代表一个输入特征。
+- **隐藏层：**一个或多个层，用于捕获数据的非线性特征。每个隐藏层由多个神经元组成，每个神经元通过激活函数增加非线性能力。
+- **输出层：**输出网络的预测结果。节点数和问题类型相关，例如分类问题的输出节点数等于类别数。
+- **连接权重与偏置：**每个神经元的输入通过权重进行加权求和，并加上偏置值，然后通过激活函数传递。
+  ![](/home/kobayashi/桌面/毕业设计笔记/picture/neural-net.png) 
+
 ### 损失函数：
 
 **目的：用于衡量模型预测与实际目标值之间误差的函数。它是模型训练的核心，帮助优化算法（如梯度下降）决定如何更新模型参数，以最小化预测错误。**
@@ -31,6 +45,8 @@
 
 
 ## Pytorch使用
+
+### 基础
 
 张量：可以看作是一个多维数组。标量可以看作是0维张量，向量可以看作1维张量，矩阵可以看作是二维张量。
 
@@ -111,6 +127,79 @@
   y = x * 2  # 进行一些运算
   y.backward()  # 反向传播，计算梯度
   print(x.grad)  # 打印 x 的梯度
+  ```
+
+  ### 神经网络
+
+  PyTorch 提供了许多常见的神经网络层，以下是几个常见的：
+
+  - **`nn.Linear(in_features, out_features)`**：全连接层，输入 `in_features` 个特征，输出 `out_features` 个特征。
+  - **`nn.Conv2d(in_channels, out_channels, kernel_size)`**：2D 卷积层，用于图像处理。
+  - **`nn.MaxPool2d(kernel_size)`**：2D 最大池化层，用于降维。
+  - **`nn.ReLU()`**：ReLU 激活函数，常用于隐藏层。
+  - **`nn.Softmax(dim)`**：Softmax 激活函数，通常用于输出层，适用于多类分类问题。
+
+- **激活函数（Activation Function）**
+
+  激活函数决定了神经元是否应该被激活。它们是非线性函数，使得神经网络能够学习和执行更复杂的任务。常见的激活函数包括：
+
+  - Sigmoid：用于二分类问题，输出值在 0 和 1 之间。
+  - Tanh：输出值在 -1 和 1 之间，常用于输出层之前。
+  - ReLU（Rectified Linear Unit）：目前最流行的激活函数之一，定义为 `f(x) = max(0, x)`，有助于解决梯度消失问题。
+  - Softmax：常用于多分类问题的输出层，将输出转换为概率分布。
+
+  ```py
+  import torch.nn.functional as F
+  
+  # ReLU 激活
+  output = F.relu(input_tensor)
+  
+  # Sigmoid 激活
+  output = torch.sigmoid(input_tensor)
+  
+  # Tanh 激活
+  output = torch.tanh(input_tensor)
+  ```
+
+- **损失函数**
+
+  常见的损失函数包括：
+
+  - **均方误差（MSELoss）**：回归问题常用，计算输出与目标值的平方差。
+  - **交叉熵损失（CrossEntropyLoss）**：分类问题常用，计算输出和真实标签之间的交叉熵。
+  - **BCEWithLogitsLoss**：二分类问题，结合了 Sigmoid 激活和二元交叉熵损失。
+
+  ```py
+  # 均方误差损失
+  criterion = nn.MSELoss()
+  
+  # 交叉熵损失
+  criterion = nn.CrossEntropyLoss()
+  
+  # 二分类交叉熵损失
+  criterion = nn.BCEWithLogitsLoss()
+  ```
+
+- **优化器（Optimizer）**
+
+  优化器负责在训练过程中更新网络的权重和偏置。
+
+  常见的优化器包括：
+
+  - SGD（随机梯度下降）
+
+  - Adam（自适应矩估计）
+
+  - RMSprop（均方根传播）
+
+  ```py
+  import torch.optim as optim
+  
+  # 使用 SGD 优化器
+  optimizer = optim.SGD(model.parameters(), lr=0.01)
+  
+  # 使用 Adam 优化器
+  optimizer = optim.Adam(model.parameters(), lr=0.001)
   ```
 
 - **构建神经网络**
