--- a/毕业设计笔记.md
+++ b/毕业设计笔记.md
@@ -296,3 +296,231 @@ for epoch in range(100):  # 训练 100 轮
         print(f'Epoch [{epoch+1}/100], Loss: {loss.item():.4f}')
 ```
 
+## 代码阅读
+
+### `def get_parser()`: 定义了命令行的参数。
+
+#### 参数优先级: 命令行 > 配置文件 > 默认值
+
+- **`--work-dir`**
+   用于存储结果的工作目录，默认是 `./work_dir/temp`。
+- **`-model_saved_name`**
+   存储的模型名称，默认为空。
+- **`--config`**
+   配置文件的路径，默认是 `./config/nturgbd-cross-view/test_bone.yaml`。
+
+#### processor 处理
+
+- **`--phase`**
+   训练阶段，必须为 `train` 或 `test`，默认是 `train`。
+- **`--save-score`**
+   是否保存分类得分，布尔类型，默认是 `False`。
+
+#### visulize and debug 可视化和调试
+
+- **`--seed`**
+   PyTorch 的随机种子，默认值为 `1`。
+- **`--log-interval`**
+   训练时打印日志的间隔（以迭代次数计），默认值为 `100`。
+- **`--save-interval`**
+   训练时保存模型的间隔（以迭代次数计），默认值为 `1`。
+- **`--save-epoch`**
+   从哪个 epoch 开始保存模型，默认值为 `30`。
+- **`--eval-interval`**
+   评估模型的间隔（以迭代次数计），默认值为 `5`。
+- **`--print-log`**
+   是否打印日志，布尔类型，默认值为 `True`。
+- **`--show-topk`**
+   显示 Top-K 精度，默认是 `[1, 5]`，可以传入多个值。
+
+####  feeder
+
+- **`--feeder`**
+   数据加载器的路径，默认是 `'feeder.feeder'`。
+- **`--num-worker`**
+   数据加载器的 worker 数量，默认值为 `32`。
+- **`--train-feeder-args`**
+   训练数据加载器的参数，默认为空字典 `{}`。
+- **`--test-feeder-args`**
+   测试数据加载器的参数，默认为空字典 `{}`。
+
+#### model 模型
+
+- **`--model`**
+   要使用的模型，默认值为 `None`。
+- **`--model-args`**
+   传递给模型的参数，默认为空字典 `{}`。
+- **`--weights`**
+   用于模型初始化的权重文件，默认值为 `None`。
+- **`--ignore-weights`**
+   初始化时要忽略的权重名称列表，默认是空列表 `[]`，可以传入多个值。
+
+#### optim 优化
+
+- **`--base-lr`**
+   初始学习率，默认值为 `0.01`。
+- **`--step`**
+   优化器降低学习率的 epoch 位置，默认是 `[20, 40, 60]`，可以传入多个值。
+- **`--device`**
+   训练或测试时使用的 GPU 设备编号，默认是 `0`，可以传入多个值。
+- **`--optimizer`**
+   优化器类型，默认是 `'SGD'`。
+- **`--nesterov`**
+   是否使用 Nesterov 动量，布尔类型，默认值为 `False`。
+- **`--batch-size`**
+   训练时的 batch 大小，默认值为 `256`。
+- **`--test-batch-size`**
+   测试时的 batch 大小，默认值为 `256`。
+- **`--start-epoch`**
+   训练从哪个 epoch 开始，默认值为 `0`。
+- **`--num-epoch`**
+   训练总 epoch 数，默认值为 `80`。
+- **`--weight-decay`**
+   优化器的权重衰减系数，默认值为 `0.0005`。
+- **`--lr-ratio`**
+   学习率衰减比例，默认值为 `0.001`。
+- **`--lr-decay-rate`**
+   学习率衰减率，默认值为 `0.1`。
+- **`--warm_up_epoch`**
+   预热训练的 epoch 数，默认值为 `0`。
+- **`--loss-type`**
+   损失函数类型，默认值为 `'CE'`（交叉熵）。
+
+### init_seed(seed)
+
+**因为在深度学习任务中，随机性会影响模型的训练所以设定随机种子，使实验结果可复现**
+
+### processor类
+
+#### `__init__`
+
+```py
+if phase=='train'
+	表示模型处于训练阶段，需要设置训练日志目录
+	if `debug` 模式关闭
+		创建 model_saved_name 目录路径，用于存储训练过程的日志、模型权重等文件。
+		if 如果日志目录已存在
+			则提示用户是否删除旧的日志。防止日志目录混乱，确保每次训练都是一个干净的环境。
+			if 用户选择 'y'
+            	则删除旧目录，提醒用户刷新 TensorBoard。
+			else 
+            	保留旧的训练日志。
+			创建 TensorBoard 记录器：
+    		训练日志 (train_writer) 存储在 runs/train
+    		验证日志 (val_writer) 存储在 runs/val
+    else
+    	表示debug 模式开启，日志只存放到test目录，避免浪费存储空间。
+记录训练步数 (global_step)，用于控制学习率调整、日志记录等。
+调用 load_model() 方法，加载模型结构，并尝试载入预训练权重（如果有）。
+
+if phase =='model_size'
+	说明只想计算模型大小，不需要加载优化器和数据。
+else
+    self.load_optimizer()：加载优化器（如 Adam、SGD）。
+    self.load_data()：加载数据集（训练集、测试集）。
+
+设置初始学习率 (base_lr 可能是 arg 里定义的超参数)。
+记录最佳精度 (best_acc) 及其对应的 epoch (best_acc_epoch)。
+将模型 (self.model) 移动到指定的 GPU (self.output_device)。
+
+if arg.device 是列表
+	if 包含多个 GPU：
+        使用 nn.DataParallel 进行多 GPU 训练。
+        device_ids=self.arg.device 指定要使用的 GPU。
+        output_device=self.output_device 设定主 GPU（用于 loss 计算）。
+```
+
+#### load_model()
+
+✔ **确定计算设备** ✔ **动态导入模型** ✔ **实例化模型** ✔ **设置损失函数** ✔ **加载预训练权重** ✔ **删除不需要的权重** ✔ **兼容不同权重加载方式**
+
+#### load_data()
+
+### HDGCN.py(核心)
+
+这段代码实现了一个结合多尺度时间卷积（TCN）和层次分解图卷积（HD-GCN）的深度学习模型，用于处理骨骼关键点数据的动作识别任务（如NTU RGB+D数据集）。1. 核心组件解析
+
+1. **时间卷积模块**
+- `TemporalConv`：基础时间卷积单元，使用2D卷积处理时间维度
+- `MultiScale_TemporalConv`：多分支结构，包含：
+  - 不同膨胀率的时序卷积分支
+  - 最大池化分支
+  - 1x1卷积分支
+  - 残差连接设计
+
+2. **图卷积模块**
+- `EdgeConv`：动态边卷积
+  - 通过k-NN构建局部图结构
+  - 使用特征差（feature - x）和原始特征拼接
+  - 最大池化聚合邻居信息
+- `HD_Gconv`：层次分解图卷积
+  - 使用可学习的自适应邻接矩阵（PA参数）
+  - 结合多个子图卷积和边卷积
+  - 支持注意力机制（AHA模块）
+
+3. **注意力机制**
+- `AHA`（Attention Hierarchy Aggregation）：
+  - 通过分层采样关节特征
+  - 使用边卷积计算层级间注意力
+  - 加权聚合不同层次特征
+
+4. **基本单元**
+- `TCN_GCN_unit`：将图卷积与时序卷积结合的基础模块
+  - 顺序执行：GCN → TCN → 残差连接
+  - 通道数变化和下采样功能
+
+### 2. 模型架构（Model类）
+
+1. **输入处理**
+- 输入形状：(N, C, T, V, M) → (Batch, 通道, 时间帧, 关节点, 人数)
+- 数据归一化：通过BatchNorm1D处理
+
+2. **网络结构**
+10层TCN-GCN单元，分三个阶段：
+- 阶段1（l1-l4）：64通道，保持分辨率
+- 阶段2（l5-l7）：128通道，时间维度下采样
+- 阶段3（l8-l10）：256通道，再次下采样
+
+3. **输出层**
+- 时空全局平均池化
+- 全连接层分类
+
+### 3. 关键设计特点
+
+1. **多尺度时序建模**
+- 使用不同膨胀率的卷积核（dilations=[1,2]）
+- 结合最大池化和1x1卷积分支
+- 增强时间维度的特征提取能力
+
+2. **自适应图结构**
+- 可学习的邻接矩阵（PA参数）
+- 动态边卷积构建局部图关系
+- 支持层次化的关节分组（通过get_groups）
+
+3. **注意力机制**
+- 层级注意力（AHA）聚合不同层次特征
+- 基于关节运动模式（CoM）的分组策略
+
+4. **残差设计**
+- 各模块均包含残差连接
+- 通过downsample匹配维度
+- 使用ReLU保持非线性
+
+### 4. 数据流示例（前向传播）
+输入： (N, 3, 300, 25, 2) → NTU数据集典型输入
+1. 预处理：
+   - 重排为 (N*M, C, T, V)
+   - BatchNorm标准化
+2. 通过10层TCN-GCN：
+   - 通道变化：3 → 64 → 128 → 256
+   - 时间维度逐步下采样（stride=2）
+3. 输出处理：
+   - 时空池化 → (N, 256)
+   - Dropout → 全连接 → 分类得分
+
+### 5. 创新点总结
+1. 层次分解图卷积：结合预定义解剖结构和自适应学习
+2. 多尺度时空建模：同时捕捉局部和全局时空特征
+3. 注意力引导的特征聚合：增强关键关节和关键帧的表示
+
+该模型通过融合图卷积的拓扑建模能力和时间卷积的序列建模优势，在骨骼动作识别任务中表现出较好的性能。代码实现中大量使用einops张量操作库，提升了可读性和维护性。
